# silogic

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  api.rst  conf.py  guide.md  index.md
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
examples/: export_fpga_mnist.py  train_cifar10.py  train_cifar10_large.py  train_cifar10_small.py  train_fashion_mnist.py  train_mnist.py  train_mnist_warp.py
silogic/: __init__.py  connectomes.py  conv.py  data.py  data_imagenet.py  encoders.py  functional.py  heads.py  layers.py  lutk.py  model.py  models.py  nodes.py  pairlogic.py  paths.py  train.py  treenet.py  triton_conv_topk.py  triton_dense.py  triton_warp.py  warp.py
silogic/bitpacking/: __init__.py  benchmark.py  convert.py  ops.py  packed_layer.py  packed_model.py
silogic/bitpacking/kernels/: __init__.py  triton_conv_layer.py  triton_layer.py
silogic/fpga/: __init__.py  circuit.py  estimate.py  testbench.py  verilog.py
silogic/kernels/: __init__.py  conv.py  conv_hybrid.py  conv_topk.py  multilinear.py
tests/: conftest.py  test_bitpacking.py  test_conv.py  test_data.py  test_fpga.py  test_lut_nodes.py  test_model.py  test_nodes.py  test_triton.py  test_warp.py
